<resources>
    <string name="app_name">InventoryApp</string>
    <string name="name">Name</string>
    <string name="available">Available</string>
    <string name="price">Price</string>
    <string name="add_a_new_item">Add a New Item</string>
    <string name="order_more">ORDER MORE</string>
    <string name="nameTitle">Name: </string>
    <string name="priceTitle">Price: </string>
    <string name="availableTitle">Available: </string>
    <string name="sale">Sale</string>
    <string name="inventory">INVENTORY</string>
    <string name="quantities_to_be_ordered">Quantities to be Ordered</string>
    <string name="price_of_the_product">Price of the Product</string>
    <string name="available_quantities_of_the_product">Available Quantities of the Product</string>
    <string name="submit">Submit</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload Image</string>
    <string name="empty_view">There are no inventory items.\nClick the \"Add a new item\" button to start</string>
</resources>
