<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="13dp">

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="Text"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "horizontal">

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/price"
            android:textSize="18sp"
            android:layout_weight = "0.23"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight = "0.17"
            />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/available"
            android:textSize="18sp"
            android:layout_weight=" 0.23"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availableTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_weight ="0.23"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/productQuantity"
            android:layout_toStartOf="@id/productQuantity"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.56">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantities_to_be_ordered"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_alignParentTop="true"
            />
        
        <RelativeLayout
            android:orientation = "horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">
            
            <Button
                android:id="@+id/button4"
                style="?android:buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:onClick="quantityIncrement"
                android:layout_gravity = "right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/quantity"
                android:layout_toEndOf="@+id/quantity"
                />

            <Button
                android:id="@+id/button3"
                style="?android:buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:onClick="quantityDecrement"
                android:layout_gravity = "center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/quantity"
                android:layout_toStartOf="@+id/quantity"
                />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="0"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/orderNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/order_more"
            android:onClick="onSubmitMore" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDelete"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>